syntax = "proto3";

option csharp_namespace = "GrpcTest";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
  rpc GetFileList (FileListRequest) returns (FileListResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string surname = 2;
}

message DownloadFileRequest {
  string fileId = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message DownloadFileResponse {
    bytes content = 1;
}

message FileData {
    string id = 1;
    string fileName = 2;
}

message FileListRequest {

}

message FileListResponse {
    repeated FileData fileList = 1;
}
